# fitness-ledger

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README-1.md  README.md  docker-compose.yml  nginx.conf
back/: Cargo.toml
bins/: Cargo.toml
bins/src/: main.rs
bot/: Cargo.toml
bot-static/: main.html  main.js
bot-static/_js/: auth.js  ledger.js
bot-static/css/: style.css
bot-static/js/: auth.js  main.js  navibar.js  tg.js
bot-static/pages/: calendar.html  instructors.html  more.html  schedule.html
bot/src/: context.rs  lib.rs  state.rs
bot/src/process/: format.rs  greeting.rs  main_menu.rs  mod.rs  profile_menu.rs
bot/src/process/schedule_menu/: lending.rs  mod.rs  schedule.rs
bot/src/process/schedule_menu/calendar/: day.rs  mod.rs  plan_training.rs  rendering.rs  week.rs
bot/src/process/users_menu/: mod.rs  search.rs  user_profile.rs
bot/src/process/users_menu/user_profile/: mod.rs  rights.rs
bot/src/view/: menu.rs  mod.rs  profile.rs  signup.rs
bot/src/view/calendar/: day.rs  mod.rs  training.rs
bot/src/view/schedule/: mod.rs
bot/src/view/subscription/: mod.rs
bot/src/view/training/: create_training.rs  find_training.rs  me_training.rs  mod.rs  schedule_training.rs  view_training_proto.rs
bot/src/view/training/schedule_process/: finish.rs  mod.rs  set_date_time.rs  set_instructor.rs
bot/src/view/users/: mod.rs  profile.rs  rights.rs
crates/ai/: Cargo.toml
crates/ai/src/: lib.rs  model.rs
crates/bg-process/: Cargo.toml
crates/bg-process/src/: lib.rs  notifier.rs
crates/bg-process/src/process/: ai_messages.rs  birthdays.rs  freeze.rs  mod.rs  notifier.rs  requests.rs  rewards.rs  subscription.rs  training.rs  user_sync.rs
crates/bot/: Cargo.toml
crates/bot/core/: Cargo.toml
crates/bot/core/src/: bot.rs  callback_data.rs  confirm.rs  context.rs  err.rs  lib.rs  state.rs  widget.rs  window.rs
crates/bot/core/src/handlers/: callback.rs  message.rs  mod.rs
crates/bot/core/src/script/: list.rs  mod.rs  text.rs  yes_no.rs
crates/bot/couching/: Cargo.toml
crates/bot/couching/src/: couch_info.rs  couch_list.rs  lib.rs  make_couch.rs  programs_list.rs
crates/bot/main/: Cargo.toml
crates/bot/main/src/: lib.rs  system.rs
crates/bot/main/src/system/: subscription.rs
crates/bot/main/src/view/: common_location.rs  menu.rs  mod.rs  signup.rs
crates/bot/marketing/: Cargo.toml
crates/bot/marketing/src/: lib.rs
crates/bot/marketing/src/requests/: create.rs  history.rs  mod.rs
crates/bot/marketing/src/requests/edit/: add_comment.rs  change_source.rs  mod.rs  notification.rs
crates/bot/marketing/src/statistics/: budget.rs  instructors.rs  mod.rs  view_ai.rs
crates/bot/marketing/src/statistics/clients/: mod.rs
crates/bot/users/: Cargo.toml
crates/bot/users/src/: come_from.rs  comments.rs  family.rs  freeze.rs  history.rs  lib.rs  notification.rs  profile.rs  rewards.rs  rights.rs  set_ai_prompt.rs  set_birthday.rs  set_fio.rs  set_phone.rs
crates/bot/users/src/family/: add_member.rs
crates/bot/users/src/rewards/: recalc.rs
crates/bot/users/src/subscriptions/: item_price.rs  mod.rs  program.rs
crates/env/: Cargo.toml
crates/graph/: Cargo.toml
crates/ledger/: Cargo.toml
crates/ledger/src/: calendar.rs  dump.rs  history.rs  lib.rs  logs.rs  programs.rs  rewards.rs  statistics.rs  subscriptions.rs  training.rs  treasury.rs  users.rs
crates/ledger/src/process/: freeze.rs  logs.rs  mod.rs  rewards.rs  subscription.rs  training.rs
crates/ledger/src/service/: auth.rs  backup.rs  calendar.rs  history.rs  mod.rs  notification.rs  programs.rs  requests.rs  rewards.rs  statistics.rs  subscriptions.rs  treasury.rs  users.rs
crates/ledger/src/service/statistics/: cache.rs  calendar.rs  clients.rs  history.rs  mod.rs  treasury.rs
crates/ledger/src/service/statistics/aggregation/: mod.rs
crates/ledger/src/service/statistics/aggregation/loader/: mod.rs
crates/ledger/src/service/statistics/prompt/: mod.rs  render.rs
crates/ledger/src/service/users/: ai.rs  comments.rs  couch.rs  employee.rs  family.rs  mod.rs  statistics.rs  subscription.rs
crates/mini-app/main/: Cargo.toml
crates/mini-app/main/dump/: main copy.html  main.ts
crates/mini-app/main/dump/pages/: programs.html
crates/mini-app/main/dump/ts/ledger/: calendar.ts
crates/mini-app/main/src/: auth.rs  contex.rs  jwt.rs  lib.rs
crates/mini-app/main/src/profile/: mod.rs  view.rs
crates/mini-app/main/src/users/: load_user.rs  mod.rs
crates/mini-app/main/src/view/: user.rs
crates/mini-app/main/templates/: main.html
crates/model/: Cargo.toml
crates/model/src/: abilities.rs  auth.rs  couch.rs  day.rs  decimal.rs  errors.rs  history.rs  ids.rs  invoice.rs  lib.rs  log.rs  notification.rs  payment.rs  program.rs  proto.rs  request.rs  reward.rs  rights.rs  rooms.rs  session.rs  slot.rs  statistics.rs  subscription.rs  training.rs  user.rs
crates/model/src/statistics/: calendar.rs  day.rs  history.rs  marketing.rs  mod.rs  month.rs  range.rs  source.rs  training.rs  user.rs
crates/model/src/treasury/: aggregate.rs  income.rs  mod.rs  outcome.rs  subs.rs  training.rs
crates/model/src/user/: comments.rs  employee.rs  extension.rs  family.rs  mod.rs  rate.rs
crates/payment/yookassa/: Cargo.toml
crates/payment/yookassa/src/: intent.rs  lib.rs  payment.rs  payment_request.rs  prepare_payment.rs
crates/storage/: Cargo.toml
crates/storage/src/: auth_key.rs  calendar.rs  couch.rs  dump.rs  history.rs  lib.rs  logs.rs  notification.rs  pre_cell.rs  pre_sell.rs  program.rs  requests.rs  rewards.rs  session.rs  subscription.rs  training.rs  treasury.rs  user.rs
crates/storage/src/calendar/: mod.rs  model.rs
crates/storage/src/user/: employee.rs  mod.rs  model.rs  rights.rs
crates/time/: Cargo.toml
crates/tx_macro/: Cargo.toml
ledger/: Cargo.toml
ledger/src/: calendar.rs  lib.rs  schedule.rs  training.rs  users.rs
mini-app/: Cargo.toml
mongodb/: Dockerfile  generate-keyfile.sh  init.sh  mongo-init.js
src/: app.rs  main.rs
storage/: Cargo.toml
storage/src/: date_time.rs  lib.rs  user.rs
(+221 files in other folders)
