[workspace.package]
edition = "2021"
license = "Apache-2.0"
publish = false
version = "0.1.0"

[workspace]
members = ["crates/*", "bins"]
resolver = "2"

[workspace.dependencies]
bg-process = {path = "crates/bg-process"}
bot = {path = "crates/bot"}
ledger = {path = "crates/ledger"}
mini-app = {path = "crates/mini-app"}
model = {path = "crates/model"}
storage = {path = "crates/storage"}

#libs 
async-trait = "0.1.81"
bincode = "1.3.3"
bson = {version = "2", features = ["chrono-0_4"]}
chrono = {version = "0.4.38", features = ["serde"]}
color-eyre = "0.6"
derive_more = "0.99"
dotenv = "0.15.0"
eyre = "0.6"
futures = "0.3"
futures-util = "0.3.30"
hex = "0.4.3"
itertools = "0.2.2"
log = "0.4"
mongodb = {version = "3.0"}
pretty_env_logger = "0.5"
serde = "1"
serde_json = "1"
serde_with = "3.9.0"
strum = {version = "0.26", features = ["derive"]}
teloxide = {version = "0.13", features = ["macros"]}
thiserror = "1"
tokio = {version = "1", features = ["full"]}
url = "2"
