[workspace.package]
edition = "2021"
license = "Apache-2.0"
publish = false
version = "0.1.0"

[workspace]
members = [
  "crates/bg-process",
  "crates/bot/*",
  "crates/ledger",
  "crates/mini-app/*",
  "crates/model",
  "crates/storage",
  "crates/tx_macro",
  "bins",
  "crates/env",
  "crates/payment/yookassa",
]
resolver = "2"

[workspace.dependencies]
bg-process = {path = "crates/bg-process"}
bot-calendar = {path = "crates/bot/calendar"}
bot-core = {path = "crates/bot/core"}
bot-couch = {path = "crates/bot/couch"}
bot-finance = {path = "crates/bot/finance"}
bot-main = {path = "crates/bot/main"}
bot-marketing = {path = "crates/bot/marketing"}
bot-statistic = {path = "crates/bot/statistic"}
bot-subscription = {path = "crates/bot/subscription"}
bot-trainigs = {path = "crates/bot/trainigs"}
bot-users = {path = "crates/bot/users"}
bot-viewer = {path = "crates/bot/viewer"}
bot-views = {path = "crates/bot/views"}

mini-app-main = {path = "crates/mini-app/main"}

env = {path = "crates/env"}
ledger = {path = "crates/ledger"}
model = {path = "crates/model"}
storage = {path = "crates/storage"}
tx_macro = {path = "crates/tx_macro"}
yookassa = {path = "crates/payment/yookassa"}

#libs 
askama = "0.12.1"
async-trait = "0.1.81"
axum = "0.7.7"
axum-extra = {version = "0.9.4", features = ["cookie-private"]}
bincode = "1.3.3"
bson = {version = "2", features = ["chrono-0_4"]}
chrono = {version = "0.4.38", features = ["serde"]}
color-eyre = "0.6"
derive_more = "0.99"
dotenv = "0.15.0"
eyre = "0.6"
futures = "0.3"
futures-util = "0.3.30"
hex = "0.4.3"
itertools = "0.2.2"
log = "0.4"
mongodb = {version = "3.0"}
parking_lot = "0.12.3"
pretty_env_logger = "0.5"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.8.4"
reqwest = {version = "0.12.9", features = ["json"]}
serde = "1"
serde_json = "1"
serde_with = "3.9.0"
strum = {version = "0.26", features = ["derive"]}
syn = "1.0"
teloxide = {version = "0.13", features = ["macros"]}
thiserror = "1"
tokio = {version = "1", features = ["full"]}
tokio-cron-scheduler = {version = "0.13.0", features = ["english"]}
url = "2"
uuid = "1.11.0"
zip = "2.2.0"
