[package]
name = "ledger-cli"

edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
bot.workspace = true
ledger.workspace = true
mini-app.workspace = true
storage.workspace = true

color-eyre.workspace = true
dotenv.workspace = true
eyre.workspace = true
log.workspace = true
pretty_env_logger.workspace = true
tokio.workspace = true
