[package]
name = "bot"

edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
eyre.workspace = true
itertools.workspace = true
ledger.workspace = true
log.workspace = true
storage.workspace = true
strum.workspace = true
teloxide.workspace = true
