[package]
name = "bg-process"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
ledger.workspace = true
model.workspace = true
tokio.workspace = true
eyre.workspace = true
log.workspace = true
async-trait.workspace = true
chrono.workspace = true
