[package]
name = "bg-process"

edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
bot-main.workspace = true
chrono.workspace = true
eyre.workspace = true
ledger.workspace = true
log.workspace = true
model.workspace = true
tokio.workspace = true
tx_macro.workspace = true
mongodb.workspace = true
