[package]
name = "bg-process"

edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
bot-core.workspace = true
bot-main.workspace = true
bot-viewer.workspace = true
chrono.workspace = true
eyre.workspace = true
futures-util.workspace = true
ledger.workspace = true
log.workspace = true
model.workspace = true
mongodb.workspace = true
teloxide.workspace = true
tokio-cron-scheduler.workspace = true
tokio.workspace = true
tx_macro.workspace = true
