[package]
name = "ledger"

edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
eyre.workspace = true
futures-util.workspace = true
log.workspace = true
model.workspace = true
mongodb.workspace = true
storage.workspace = true
tokio.workspace = true
