[package]
name = "ledger"

edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
eyre.workspace = true
futures-util.workspace = true
log.workspace = true
model.workspace = true
mongodb.workspace = true
serde_json.workspace = true
storage.workspace = true
thiserror.workspace = true
tokio.workspace = true
tx_macro.workspace = true
zip.workspace = true
yookassa.workspace = true
env.workspace = true
serde.workspace = true
bson.workspace = true
ai.workspace = true
arc-swap.workspace = true
csv.workspace = true
