[package]
name = "model"

edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
bson.workspace = true
chrono.workspace = true
eyre.workspace = true
hex.workspace = true
log.workspace = true
mongodb.workspace = true
rand.workspace = true
serde.workspace = true
strum.workspace = true
time.workspace = true
bincode.workspace = true
thiserror.workspace = true
