[package]
name = "storage"

edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
bson.workspace = true
chrono.workspace = true
eyre.workspace = true
futures-util.workspace = true
log.workspace = true
model.workspace = true
mongodb.workspace = true
serde.workspace = true
serde_with.workspace = true
strum.workspace = true
