[package]
name = "bot-core"

edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
bincode.workspace = true
chrono.workspace = true
env.workspace = true
eyre.workspace = true
hex.workspace = true
itertools.workspace = true
ledger.workspace = true
log.workspace = true
model.workspace = true
mongodb.workspace = true
parking_lot.workspace = true
serde.workspace = true
storage.workspace = true
strum.workspace = true
teloxide.workspace = true
serde_json.workspace = true
bs58.workspace = true
