[package]
name = "bot-marketing"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
bincode.workspace = true
bot-core.workspace = true
bot-viewer.workspace = true
bot-views.workspace = true
chrono.workspace = true
eyre.workspace = true
hex.workspace = true
itertools.workspace = true
ledger.workspace = true
log.workspace = true
model.workspace = true
mongodb.workspace = true
serde.workspace = true
storage.workspace = true
strum.workspace = true
teloxide.workspace = true
time.workspace = true
graph.workspace = true
