[package]
name = "bot-users"
version = "0.1.0"
edition = "2021"

[dependencies]
bot-core.workspace = true
async-trait.workspace = true
bincode.workspace = true
chrono.workspace = true
eyre.workspace = true
hex.workspace = true
itertools.workspace = true
ledger.workspace = true
log.workspace = true
mongodb.workspace = true
serde.workspace = true
storage.workspace = true
strum.workspace = true
teloxide.workspace = true
model.workspace = true