[package]
name = "mini-app-main"

edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
askama.workspace = true
env.workspace = true
axum-extra.workspace = true
axum.workspace = true
bot-core.workspace = true
bot-main.workspace = true
eyre.workspace = true
ledger.workspace = true
log.workspace = true
serde.workspace = true
teloxide.workspace = true
tokio.workspace = true
